<resources>
    <string name="app_name">MICAPP</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="login_with_github">Login with github</string>
    <string name="login_with_instagram">Login with instagram</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="signup_welcome">Welcome!</string>
    <string name="username">username</string>
    <string name="signup">Sign up</string>
    <string name="or">or</string>
    <string name="signup_with_google">Signup with google\n</string>
    <string name="signup_with_facebook">Signup with facebook</string>
    <string name="signup_with_github">Signup with github</string>
    <string name="already_have_account_sign_in">Already have account? Sign in</string>
    <string name="dont_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_welcome">Welcome!</string>
    <string name="welcome_text">Welcome!</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="default_web_client_id">369001973714-fo9orc1i8ouj8tddlmq4alnvht409ppm.apps.googleusercontent.com</string>
    <string name="register_success">You signed up successfully!</string>
    <string name="err_msg_enter_email">Enter the email</string>
    <string name="err_msg_enter_name">Enter the username</string>
    <string name="err_msg_enter_password">Enter the password</string>
    <string name="err_msg_enter_reppassword">Enter the password for the second time</string>
    <string name="err_msg_password_mismatch">Passwords mismatch, try again</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="show_password">Show password</string>
    <string name="password_requirements">Your password must have at least 8 characters, 1 uppercase letter, and 1 number.</string>
    <string name="min_8_characters">At least 8 characters</string>
    <string name="min_1_uppercase">At least 1 uppercase</string>
    <string name="min_1_number">At least 1 number</string>
    <string name="signup_with_instagram">Signup with instagram</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email">Please enter your email</string>
    <string name="go_back">Go back</string>
    <string name="login_with_microsoft">Login with microsoft</string>
    <string name="signup_with_microsoft">Signup with Microsoft</string>
    <string name="unknown_error_message">An unknown error occurred during login</string>


    <string name="facebook_app_id">1082433396215165</string>
    <string name="fb_login_protocol_scheme">fb1082433396215165</string>
    <string name="facebook_client_token">f96c9dfda5b14ee3f2b4b1f13439ed1d</string>
    <string name="MiCapp">MiCapp</string>
    <string name="nav_drawer_open">nav_drawer_open</string>
    <string name="nav_drawer_close">nav_drawer_close</string>
    <string name="header_title">Navigation Menu</string>
    <string name="first_fragment">First Activity\n</string>
    <string name="second_fragment">Second Activity</string>
    <string name="swipe_up">Swipe to see upcoming events!</string>
    <string name="swipe_down">Swipe down to close!</string>
    <string name="select_category">Select category for the event</string>
    <string name="save">Save</string>
    <string name="event_name">Add event name</string>
    <string name="add_groups">Add groups</string>
    <string name="add_description">Add description</string>
    <string name="add_attachments">Add attachements</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="user_display_format">%s - %s\n</string>
    <string name="remove_file">Remove file\n</string>
    <string name="unknown_file">Unknown file</string>
    <string name="events_for_selected_day">Events for selected day</string>
    <string name="no_events_planned">No events planned for selected day</string>
    <string name="Options">Options</string>
    <string name="Timetable">Timetable</string>
    <string name="Profile">Profile</string>
    <string name="Filtering">Filtering</string>


</resources>