<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_forgot_3"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/ic_go_back"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/textViewResetPasswordHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="Reset Password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#EAAB8A"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewResetPasswordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewResetPasswordHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Enter New Password"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewPasswordCriteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewResetPasswordDescription"
        android:layout_marginTop="15dp"
        android:text="Your new password must be different from previously used one."
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPasswordCriteria"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#7A5C7E"
            android:hint="@string/fui_new_password_hint"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:textColor="#D5D5D5"
            android:textColorHint="#86D5D5D5" />

        <ImageButton
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/show_password"
            android:padding="0dp"
            android:layout_marginTop="15dp"

            android:scaleType="fitCenter"
            android:src="@drawable/ic_visibility_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMinChars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutPassword"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp">

        <ImageView
            android:id="@+id/imageViewMinChars"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/min_8_characters"
            android:textColor="#D5D5D5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUppercase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutMinChars"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp">

        <ImageView
            android:id="@+id/imageViewUppercase"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/min_1_uppercase"
            android:textColor="#D5D5D5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutUppercase"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp">

        <ImageView
            android:id="@+id/imageViewNumber"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/min_1_number"
            android:textColor="#D5D5D5" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonContinueResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutNumber"
        android:layout_marginTop="30dp"
        android:text="Continue"
        android:backgroundTint="#365071"
        android:textColor="#E8977D"
        android:padding="16dp" />
</RelativeLayout>
